<resources>
    <string name="app_name">TableTennisTournament</string>
    <string name="activity_next_fixtures_title">Upcoming Fixtures</string>
    <string name="activity_players_title">Players</string>
    <string name="navigation_next_fixtures">Upcoming</string>
    <string name="navigation_cup">Cup</string>
    <string name="navigation_players">Players</string>
    <string name="player_avatar">player_avatar</string>
    <string name="server_error">Something went wrong. Please try again later.</string>
    <string name="player_add_button">player_add_button</string>
    <string name="player_level_icon">player_level_icon</string>
    <string name="label_new_player">New Player</string>
    <string name="hint_add_player_name">Name*</string>
    <string name="hint_add_player_height">Height (Optional)</string>
    <string name="hint_add_player_weight">Weight (Optional)</string>
    <string name="hint_add_player_city">City*</string>
    <string name="text_input_add_player_birth_year">Birth Year (Optional)</string>
    <string name="text_input_add_player_level">Level*</string>
    <string name="text_layout_error_required">*Required</string>
    <string name="text_layout_error_height">Between 20 and 250</string>
    <string name="text_layout_error_weight">Between 10 and 200</string>
    <string name="player_picture">player picture</string>
    <string name="best_ranking">Best Ranking</string>
    <string name="best_top_4">Best Top 4</string>
    <string name="best_score">Best Score</string>
    <string name="best_level">Best Level</string>
    <string name="beginner_cups">Beginner Cups</string>
    <string name="intermediate_cups">Intermediate Cups</string>
    <string name="advanced_cups">Advanced Cups</string>
    <string name="open_cups">Open Cups</string>
    <string name="beginner_seasons">Beginner Seasons</string>
    <string name="intermediate_seasons">Intermediate Seasons</string>
    <string name="advanced_seasons">Advanced Seasons</string>
    <string name="open_seasons">Open Seasons</string>
    <string name="reload_button">Reload</string>
    <string name="current_season_id">CURRENT_SEASON_ID</string>
    <string name="label_add_fixture">Add Fixture</string>
    <string name="label_player_profile">Player Profile</string>
    <string name="shared_preferences">SHARED_PREFERENCES</string>
    <string name="volley_request_timeout">30000</string>
    <string name="title_activity_login">Table Tennis Tournament</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid email.</string>
    <string name="invalid_password">Password is empty.</string>
    <string name="login_failed">"Login failed"</string>
    <string name="activity_label_edit_fixture">Edit Fixture</string>
    <string name="activity_label_ranking">Ranking</string>
    <string name="continue_without_signing_in">Continue without signing in</string>
    <string name="fixture_content_information">Information</string>
    <string name="expand_information_button_description">Expand Information</string>
    <string name="end_group_stage_button">End Group Stage</string>
    <string name="end_fixture_fab">End fixture</string>
    <string name="end_season_fab">End Season</string>
</resources>