<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.upcoming.NextFixturesActivity">

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/circular_progress_indicator_upcoming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_upcoming"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_reload_upcoming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:onClick="getFixtures"
        android:text="@string/reload_button"
        android:visibility="invisible"
        app:icon="@drawable/ic_baseline_refresh_24"
        app:layout_constraintBottom_toTopOf="@+id/text_view_server_error_upcoming"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/text_view_server_error_upcoming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_error"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_upcoming"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_reload_upcoming" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_upcoming_fixtures"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_upcoming"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button_add_fixture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/player_add_button"
        android:onClick="onClickAddFixture"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_upcoming"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_upcoming"
        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/design_default_color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_cup" />

</androidx.constraintlayout.widget.ConstraintLayout>